# tunnel-operator

./: .dockerignore  Cargo.toml  Dockerfile  README.md  Tiltfile
.tilt/: namespace.yaml
helm/: Chart.yaml  values.yaml
helm/templates/: NOTES.txt  _helpers.tpl  clusterrole.yaml  clusterrolebinding.yaml  crd.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  role.yaml  rolebinding.yaml  service.yaml  serviceaccount.yaml
helm/templates/tests/: test-connection.yaml
src/: configuration.rs  crd.rs  lib.rs  operator.rs  route.rs  server.rs  shutdown.rs  tunnel.rs
src/operators/: localtunnel.rs  mod.rs
