[package]
name = "tunnel-operator"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tunnel-operator"
path = "src/bin/operator.rs"

[dependencies]
axum = "0.5.11"
config = "0.13.1"
hyper = { version = "0.14.19", features = ["full"] }
serde = { version = "1.0.138", features = ["derive"] }
tokio = { version = "1.19.2", features = ["full"] }
tower = "0.4.13"
tracing = "0.1.35"
tracing-futures = "0.2.3"
tracing-subscriber = "0.3.14"
